# EternalTextureCompressor

./: CMakeLists.txt  README.md  compressor.c  compressor.cpp  decompressor.cpp  oodle.h  oodle.hpp
.github/workflows/: build.yml
